Fix spacing issue

--- a/inc/assets/css/style.scss
+++ b/inc/assets/css/style.scss
@@ -92,6 +92,7 @@ header {
 
 textarea {
 	height: 120px;
+	tab-size: 0;
 	width: 100%;
 }
 
